# Personalized-Networking-Assistant

./: README.md  pyproject.toml  requirment.txt
app/: config.py  main.py
app/models/: __init__.py  schema.py
app/routes/: __init__.py  conversation.py  networking.py
app/services/: __init__.py  event_analyzer.py  fact_checker.py  feedback_logger.py  history_logger.py  topic_generator.py
app/storage/: conversation_history.json
frontend/: streamlit_app.py
storage/: conversation_history.json  feedback.json
